--- a/theme/_sass/_v3.scss
+++ b/theme/_sass/_v3.scss
@@ -574,6 +574,7 @@ h5 .title-anchor-link{ display: none;}
         color: #666;
         font-size: 14px;
         line-height: 21px;
+        overflow: hidden;
     }   
 }
 @mixin header-generator($font-size, $letter-spacing, $margin-bottom, $font-weight:500) {
